    . [#287] On Win XP inet_ntop() could not be located in WS2_32.dll
    . [#293] Rotation extrinsic for RealSense is not correct
    . [#299] Unable to build when libaria is used
    . [#302] Fix build issue with librealsense 2.9.1 or higher
    . [#324] How to compile ViSP within Visual Studio 2013 on windows 7?
    . [#348] ViSP-third-party.txt is erased after make
    . [#355] Segmentation fault with vpRealSense2 acquire
    . [#368] ViSP Contrib Module including non-existant vpConfig.h header
    . [#371] Wrong conversion from vpRotationMatrix to vpThetaUVector for rotations around pi
    . [#373] ViSP doesn't build with OpenCV 4.0.0
    . [#382] Meaningless camera parameters when calibrating built-in auto-focusing camera
    . [#389] CMake error with Xcode generator
    . [#391] Tutorial command error
    . [#400] vpCircle::display() didn't work as expected
    . [#422] Two #include lines, <linux/kernel.h> and <linux/types.h>, aren't needed for V4L
    . [#423] Man page location should be man/man1
    . [#424] Please have one cmake variablefor DATADIR
    . [#425] Please remove the 'register' specifier everywhere: it is deprecated and incompatible with C++17
    . [#433] Can not build android SDK
    . [#442] Unable to build ios framework
    . [#453] CMake error when building tutorials and examples with ViSP from installation folder
    . [#466] Build error with libboost_thread-mt.a
    . [#429] vpRobotViper650 getPosition(vpRobot::REFERENCE_FRAME) error
    . [#485] CMake error when PCL is build with VTK option VTK_ENABLE_KITS=ON
----------------------------------------------
ViSP 3.1.0 (released December 22nd, 2017)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Souriya Trinh, Wenfeng Cai, Oleksandr Borysov, Marc Pouliquen, Ronald Ensing,
      Yuriy Baranov, Jason Chevie
    . Google Summer of Code 2017: Vikas Thamizharasan that developed for the