@@ -93,6 +93,7 @@ ViSP 3.2.0 (under development)
     . [#302] Fix build issue with librealsense 2.9.1 or higher
     . [#324] How to compile ViSP within Visual Studio 2013 on windows 7?
     . [#348] ViSP-third-party.txt is erased after make
+    . [#353] Test imageSequenceReader not working
     . [#355] Segmentation fault with vpRealSense2 acquire
     . [#368] ViSP Contrib Module including non-existant vpConfig.h header
     . [#371] Wrong conversion from vpRotationMatrix to vpThetaUVector for rotations around pi
